--- a/js/best_practices/index.html
+++ b/js/best_practices/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<script src="./21-swapping-2-variable-without-temp.js"></script>
+	<script src="./0-extras-ever-known.js"></script>
 </body>
 
 </html>
