--- a/js/fundamentals/index.html
+++ b/js/fundamentals/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<script type="module" src="./es6.js"></script>
+	<script type="module" src="./function.js"></script>
 </body>
 
 </html>
